--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2020.4.5.1       # via requests
 chardet==3.0.4            # via requests
 django-dotenv==1.4.2      # via -r requirements.in
 django==3.0.5             # via -r requirements.in, djangorestframework, djangorestframework-simplejwt
+django-filter==2.2.0
 djangorestframework-simplejwt==4.4.0  # via -r requirements.in
 djangorestframework==3.11.0  # via -r requirements.in, djangorestframework-simplejwt
 idna==2.9                 # via requests
