added settings for docker

--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,11 @@
-pytest-django
-requests
-django
+django-filter
+asgiref
+Django
 djangorestframework
-pylint_django
-django_dotenv
 djangorestframework-simplejwt
 gunicorn
 psycopg2-binary
-django-filter
-importlib-metadata
-typed-ast
+PyJWT
+pytz
+sqlparse
+pytest-django
